--- a/index.html
+++ b/index.html
@@ -10,8 +10,62 @@
 </head>
 
 <body>
-    start
+    <div class="loader">
+        <div class="loader-clip clip-top">
+            <div class="marquee">
+                <div class="marquee-container">
+                    <span>Rove</span>
+                    <span>Rove</span>
+                    Rove
+                    <span>Rove</span>
+                    <span>Rove</span>
+                </div>
+            </div>
+        </div>
 
+        <div class="loader-clip clip-bottom">
+            <div class="marquee">
+                <div class="marquee-container">
+                    <span>Rove</span>
+                    <span>Rove</span>
+                    Rove
+                    <span>Rove</span>
+                    <span>Rove</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="clip-center">
+            <div class="marquee">
+                <div class="marquee-container">
+                    <span>Roze</span>
+                    <span>Roze</span>
+                    Roze
+                    <span>Roze</span>
+                    <span>Roze</span>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="container">
+        <div class="nav">
+            <div class="logo">Brand</div>
+            <div class="nav-items">
+                <a href="#">Design</a>
+                <a href="#">Merch</a>
+                <a href="#">info</a>
+            </div>
+        </div>
+        <div class="footer">
+            <p>Play film</p>
+            <p>High quality video production <br>Made in Ukraine</p>
+            <p>Roze 2025</p>
+        </div>
+    </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.7/gsap.min.js"></script>
     <script src="./assets/js/main.js"></script>
 </body>
 
