03. usefull-things-092-reveal-marquee. GSAP animation.

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <div class="loader-clip clip-top">
             <div class="marquee">
                 <div class="marquee-container">
-                    <span>Rove</span>
-                    <span>Rove</span>
-                    Rove
-                    <span>Rove</span>
-                    <span>Rove</span>
+                    <span>Roze</span>
+                    <span>Roze</span>
+                    Roze
+                    <span>Roze</span>
+                    <span>Roze</span>
                 </div>
             </div>
         </div>
@@ -26,11 +26,11 @@
         <div class="loader-clip clip-bottom">
             <div class="marquee">
                 <div class="marquee-container">
-                    <span>Rove</span>
-                    <span>Rove</span>
-                    Rove
-                    <span>Rove</span>
-                    <span>Rove</span>
+                    <span>Roze</span>
+                    <span>Roze</span>
+                    Roze
+                    <span>Roze</span>
+                    <span>Roze</span>
                 </div>
             </div>
         </div>
