03. usefull-things-092-reveal-marquee. Bg.

--- a/index.html
+++ b/index.html
@@ -1,72 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="./assets/css/style.css" />
+        <title>Project</title>
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Project</title>
-</head>
+    <body>
+        <div class="loader">
+            <div class="loader-clip clip-top">
+                <div class="marquee">
+                    <div class="marquee-container">
+                        <span>Roze</span>
+                        <span>Roze</span>
+                        Roze
+                        <span>Roze</span>
+                        <span>Roze</span>
+                    </div>
+                </div>
+            </div>
 
-<body>
-    <div class="loader">
-        <div class="loader-clip clip-top">
-            <div class="marquee">
-                <div class="marquee-container">
-                    <span>Roze</span>
-                    <span>Roze</span>
-                    Roze
-                    <span>Roze</span>
-                    <span>Roze</span>
+            <div class="loader-clip clip-bottom">
+                <div class="marquee">
+                    <div class="marquee-container">
+                        <span>Roze</span>
+                        <span>Roze</span>
+                        Roze
+                        <span>Roze</span>
+                        <span>Roze</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="clip-center">
+                <div class="marquee">
+                    <div class="marquee-container">
+                        <span>Roze</span>
+                        <span>Roze</span>
+                        Roze
+                        <span>Roze</span>
+                        <span>Roze</span>
+                    </div>
                 </div>
             </div>
         </div>
 
-        <div class="loader-clip clip-bottom">
-            <div class="marquee">
-                <div class="marquee-container">
-                    <span>Roze</span>
-                    <span>Roze</span>
-                    Roze
-                    <span>Roze</span>
-                    <span>Roze</span>
+        <div class="container">
+            <video muted loop autoplay>
+                <source src="./assets/videos/bg1.mp4" />
+            </video>
+            <div class="nav">
+                <div class="logo">Brand</div>
+                <div class="nav-items">
+                    <a href="#">Design</a>
+                    <a href="#">Merch</a>
+                    <a href="#">Social</a>
                 </div>
             </div>
-        </div>
-
-        <div class="clip-center">
-            <div class="marquee">
-                <div class="marquee-container">
-                    <span>Roze</span>
-                    <span>Roze</span>
-                    Roze
-                    <span>Roze</span>
-                    <span>Roze</span>
-                </div>
+            <div class="footer">
+                <p>Play film</p>
+                <p>High quality video & photo production <br />Made in Ukraine</p>
+                <p>@Roze 2025</p>
             </div>
         </div>
-    </div>
 
-
-    <div class="container">
-        <div class="nav">
-            <div class="logo">Brand</div>
-            <div class="nav-items">
-                <a href="#">Design</a>
-                <a href="#">Merch</a>
-                <a href="#">info</a>
-            </div>
-        </div>
-        <div class="footer">
-            <p>Play film</p>
-            <p>High quality video production <br>Made in Ukraine</p>
-            <p>Roze 2025</p>
-        </div>
-    </div>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.7/gsap.min.js"></script>
-    <script src="./assets/js/main.js"></script>
-</body>
-
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.7/gsap.min.js"></script>
+        <script src="./assets/js/main.js"></script>
+    </body>
 </html>
